[Major] Improves code readability, improve mission resolve dialog

--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ dialog::backdrop {
 }
 
 .progress-container {
+    position: relative;
     width: 200px;
     height: 20px;
     background: #34495e;
@@ -317,8 +318,18 @@ dialog::backdrop {
 }
 
 .progress-bar {
+    position: absolute;
     height: 100%;
     background: #2ecc71;
     transition: width 0.3s ease;
     width: 0%;
+}
+
+.progress-bar-prev {
+    position: absolute;
+    height: 100%;
+    background: #3498db;
+    transition: width 0.3s ease;
+    width: 0%;
+    z-index: 1;
 }
